<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/profile_picture"
            android:src="@drawable/default_profile_picture" />

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/img_profile"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/github_username"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@id/img_profile"
            android:drawableStart="@drawable/ic_repo"
            android:fontFamily="@font/roboto"
            android:drawablePadding="5dp"
            android:text="@string/repo_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_username"
            android:layout_toEndOf="@id/tv_repo"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:drawableStart="@drawable/ic_star"
            android:fontFamily="@font/roboto"
            android:textSize="16sp"
            android:drawablePadding="5dp"
            android:text="@string/stars_text"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>